syntax = "proto3";

package notifications;

option go_package = "https://github.com/go-park-mail-ru/2024_2_kotyari/api/protos/notifications";

import "orders_updates.proto";

service Notifications {
  rpc GetOrdersUpdates(GetOrdersUpdatesRequest) returns (GetOrdersUpdatesResponse);
}